--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo-google-fonts/anta": "^0.4.0",
     "@expo/vector-icons": "^15.0.3",
+    "@ontech7/react-native-snap-carousel": "^3.9.4",
     "@react-navigation/native": "^7.1.8",
     "@tabler/icons-react": "^3.36.1",
     "@tabler/icons-react-native": "^3.36.1",
@@ -25,7 +26,9 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-maps": "1.20.1",
     "react-native-reanimated": "~4.1.1",
+    "react-native-reanimated-carousel": "^4.0.3",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
@@ -33,6 +36,7 @@
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "@types/react-native": "^0.72.8",
     "react-test-renderer": "19.1.0",
     "typescript": "~5.9.2"
   },
