--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@tabler/icons-react": "^3.36.1",
     "@tabler/icons-react-native": "^3.36.1",
     "expo": "~54.0.31",
+    "expo-camera": "~17.0.10",
     "expo-constants": "~18.0.13",
     "expo-font": "~14.0.10",
     "expo-linking": "~8.0.11",
